--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
-  "name": "plainidb",
+  "name": "@karpovsystems/idb",
   "version": "1.0.0",
+  "description": "A tiny storage library based on IndexedDB",
+  "homepage": "https://github.com/karpovsystems/idb#readme",
+  "author": "Dmitriy Karpov",
+  "license": "MIT",
+  "keywords": [
+    "indexeddb",
+    "storage"
+  ],
   "scripts": {
     "serve": "webpack-dev-server --env=development",
     "build": "webpack --env=production"
   },
-  "dependencies": {},
   "devDependencies": {
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {},
+  "main": "dist/idb.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/karpovsystems/idb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/karpovsystems/idb/issues"
   }
 }
