--- a/release.config.json
+++ b/release.config.json
@@ -5,5 +5,8 @@
   "git": {
     "requireBranch": "master",
     "requireUpstream": false
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
